test commit by Julien

--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Authors: Martin Drapeau (martin@planbox.com), Sebastien Giroux (sebastien@wajam.
 
 Home: http://www.planbox.com/code
 Download: https://github.com/martindrapeau/JSSE
+
+test is a test
