Added my name to the authors file

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Javascript Simple Search Engine
 -------------------------------
 
 Copyright (c) 2010 Planbox Inc., http://www.planbox.com/
-Authors: Martin Drapeau (martin@planbox.com), Sebastien Giroux (sebastien@wajam.com)
+Authors: Martin Drapeau (martin@planbox.com), Sebastien Giroux (sebastien@wajam.com), Julien Froment Cousineau (julien@serviceville.com)
 
 Home: http://www.planbox.com/code
 Download: https://github.com/martindrapeau/JSSE
